--- a/daily-report/index.html
+++ b/daily-report/index.html
@@ -10,8 +10,36 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-    <p>hello</p>
+    <!-- <div id="app"></div> -->
+    <form action="" class="form" id="js-form">
+      <div class="form-list">
+        <label for="name" class="form-title">Name:</label>
+        <div class="form-field">
+          <input type="text" class="input-field" id="name" name="name">
+        </div>
+      </div>
+      <div class="form-list">
+        <label for="work" class="form-title">Work:</label>
+        <div class="form-field">
+          <input type="text" class="input-field" id="work" name="work">
+        </div>
+      </div>
+      <div class="form-list">
+        <label for="comment" class="form-title">Comment:</label>
+        <div class="form-field">
+          <textarea name="comment" id="comment" class="input-field" rows="4" cols="50"></textarea>
+        </div>
+      </div>
+      <div class="form-button">
+        <button class="button" type="submit">Submit</button>
+      </div>
+      <div class="history-link">
+        <a href="./">Home</a>
+        <a href="./history.html">History</a>
+      </div>
+
+      <script type="module" src="/main.js"></script>
+    </form>
+
   </body>
 </html>
