--- a/daily-report/history.html
+++ b/daily-report/history.html
@@ -19,7 +19,7 @@
           <th>comment</th>
         </tr>
       </thead>
-      <tbody class="table-body">
+      <tbody class="table-body" id="js-history">
         <tr>
           <td>2024/01/01 10:00</td>
           <td>山田</td>
